fixed errors in 5-9 and changed z-index of header

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -20,6 +20,7 @@ body {
  #dropdown {
   margin-top: 100px;
   right: 5px;
+  z-index: 10;
  }
 
   #menuContents {
@@ -151,3 +152,8 @@ body {
   display: inline-block;
 }
   /* HEADER END */
+
+
+.header-banner {
+    height:120px;
+}
